gccida/c1/find_dummy_reload
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_dummy_reload/src/reload.c:2296:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode inmode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_dummy_reload/src/reload.c:2297:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode outmode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_dummy_reload/src/reload.c:2298:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class class_0, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_dummy_reload/src/reload.c:2313:4: error: expected ';' after expression
rtx v22; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_dummy_reload/src/reload.c:2313:5: error: use of undeclared identifier 'v22'
rtx v22; // r15 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_dummy_reload/src/reload.c:2317:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v26; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_dummy_reload/src/reload.c:2323:4: error: expected ';' after expression
rtx v32; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_dummy_reload/src/reload.c:2323:5: error: use of undeclared identifier 'v32'
rtx v32; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_dummy_reload/src/reload.c:2326:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v35; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_dummy_reload/src/reload.c:2328:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v38; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_dummy_reload/src/reload.c:2336:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v46; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_dummy_reload/src/reload.c:2338:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v49; // [rsp+4h] [rbp-74h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_dummy_reload/src/reload.c:2375:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *rtwint), 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_dummy_reload/src/reload.c:2375:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *rtwint), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_dummy_reload/src/reload.c:2377:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)BYTE2( v16)); 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_dummy_reload/src/reload.c:2386:1: error: use of undeclared identifier 'v22'
v22 = real_in; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_dummy_reload/src/reload.c:2391:1: error: use of undeclared identifier 'v22'
v22 = real_in; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_dummy_reload/src/reload.c:2394:18: error: use of undeclared identifier 'v22'
v24 = ( _DWORD *)v22->fld[0].rtwint; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_dummy_reload/src/reload.c:2401:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *v24), 
  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_dummy_reload/src/obj/reload.o] Error 1
